# erlang-osc

./: .gitignore  Emakefile  LICENSE  Makefile  Makefile.in  README  configure  configure.ac
debian/: changelog  control  rules
doc/: overview.edoc
ebin/: osc.app
src/: Makefile.am  Makefile.in  osc.app.in  osc.erl  osc.hrl  osc.rel.in  osc_app.erl  osc_lib.erl  osc_methods.erl  osc_server.erl  osc_sup.erl  overview.edoc.in
